--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "url": "https://github.com/hnryjmes/keyboard-inventory/issues"
   },
   "homepage": "https://github.com/hnryjmes/keyboard-inventory#readme",
+  "dependencies": {
+    "express": "^4.16.4"
+  },
   "devDependencies": {
     "eslint": "^5.12.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "express": "^4.16.4",
     "tslint": "^5.12.1"
   }
 }
