--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "keyboard-inventory",
   "version": "1.0.0",
   "description": "Tutorial: Use TypeScript to Build a Node API with Express",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
