--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Tutorial: Use TypeScript to Build a Node API with Express",
   "main": "src/index.js",
   "scripts": {
+    "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
