--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/hnryjmes/keyboard-inventory#readme",
   "dependencies": {
+    "@types/express": "^4.16.0",
+    "@types/node": "^10.12.18",
     "express": "^4.16.4"
   },
   "devDependencies": {
