--- a/package.json
+++ b/package.json
@@ -27,10 +27,18 @@
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
+    "@types/fs-extra": "^5.0.4",
     "@types/node": "^10.12.18",
+    "@types/shelljs": "^0.8.1",
     "eslint": "^5.12.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
+    "fs-extra": "^7.0.1",
+    "nodemon": "^1.18.9",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^2.6.3",
+    "shelljs": "^0.8.3",
+    "ts-node": "^7.0.1",
     "tslint": "^5.12.1",
     "typescript": "^3.2.2"
   }
