--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
   },
   "homepage": "https://github.com/hnryjmes/keyboard-inventory#readme",
   "dependencies": {
+    "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.0",
     "@types/fs-extra": "^5.0.4",
     "@types/node": "^10.12.18",
