--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
-    "express-session": "^1.15.6"
+    "express-session": "^1.15.6",
+    "pg": "^7.8.0",
+    "pg-promise": "^8.5.4"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.0",
@@ -38,6 +40,7 @@
     "@types/express-session": "^1.15.11",
     "@types/fs-extra": "^5.0.4",
     "@types/node": "^10.12.18",
+    "@types/pg": "^7.4.11",
     "@types/shelljs": "^0.8.1",
     "eslint": "^5.12.0",
     "eslint-config-airbnb-base": "^13.1.0",
