--- a/package.json
+++ b/package.json
@@ -28,27 +28,34 @@
   "homepage": "https://github.com/hnryjmes/keyboard-inventory#readme",
   "dependencies": {
     "@okta/oidc-middleware": "^1.0.2",
+    "axios": "^0.18.0",
     "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "materialize-css": "^1.0.0",
     "pg": "^7.8.0",
-    "pg-promise": "^8.5.4"
+    "pg-promise": "^8.5.4",
+    "vue": "^2.5.22"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.0",
     "@types/express-session": "^1.15.11",
     "@types/fs-extra": "^5.0.4",
+    "@types/materialize-css": "^1.0.6",
     "@types/node": "^10.12.18",
     "@types/pg": "^7.4.11",
     "@types/shelljs": "^0.8.1",
+    "@types/vue": "^2.0.0",
     "eslint": "^5.12.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "fs-extra": "^7.0.1",
     "nodemon": "^1.18.9",
     "npm-run-all": "^4.1.5",
+    "parcel-bundler": "^1.11.0",
     "rimraf": "^2.6.3",
     "shelljs": "^0.8.3",
     "ts-node": "^7.0.1",
