--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
   "scripts": {
     "clean": "rimraf dist/*",
     "copy-assets": "ts-node tools/copyAssets",
-    "initdb": "ts-node tools/initdb",
     "lint": "tslint -c tslint.json -p tsconfig.json --fix",
     "tsc": "tsc",
-    "build": "npm-run-all clean lint tsc copy-assets",
+    "parcel": "parcel build src/public/js/main.ts -d dist/public/js",
+    "build": "npm-run-all clean lint tsc copy-assets parcel",
     "dev:start": "npm-run-all build start",
     "dev": "nodemon --watch src -e ts,ejs --exec npm run dev:start",
     "start": "node .",
+    "initdb": "ts-node tools/initdb",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "alias": {
+    "vue": "./node_modules/vue/dist/vue.common.js"
   },
   "repository": {
     "type": "git",
